Story image overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -687,7 +687,8 @@ body {
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(15deg);
-    position: relative; }
+    position: relative;
+    overflow: hidden; }
     @media only screen and (max-width: 37.5em) {
       .story__shape {
         transform: translateX(-3rem) skewX(0); } }
