--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -7,6 +7,7 @@
     padding-left: 9rem;
     font-size: $default-font-size;
     transform: skewX(-15deg);
+    
 
     @include respond(tab-port){
         width: 100%;
@@ -28,6 +29,7 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(15deg);
         position: relative;
+        overflow: hidden;
 
         @include respond(phone){
             transform: translateX(-3rem) skewX(0);
